# bull-bear

./: Dockerfile  LICENSE  README.md  docker-compose.yml  heroku.yml  make_prediction.ipynb  manage.py  pyproject.toml  requirements.md  requirements.txt  user_stories.md
bull_and_bear/: admin.py  apps.py  forms.py  models.py  prediction.py  tests.py  urls.py  views.py
bull_and_bear/migrations/: 0001_initial.py
forecaster_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/bull_and_bear/: about.html  delete_stock.html  home.html  stock_details.html  watchlist.html
templates/partials/: _footer.html  _navbar.html  _pagination.html
templates/users/: login.html  logout.html  profile.html  register.html
users/: forms.py  urls.py  views.py
