[tool.poetry]
name = "bull-bear"
version = "0.1.0"
description = ""
authors = ["ticochuck <chucklivilla@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
django = "^3.1.2"
djangorestframework = "^3.12.1"
django-cors-headers = "^3.5.0"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
django-crispy-forms = "^1.9.2"
pandas = "^1.1.4"
finnhub-python = "^2.3.0"
matplotlib = "^3.3.2"
sklearn = "^0.0"
mplfinance = "^0.12.7-alpha.0"
tf-estimator-nightly = "^2.5.0-alpha.2020110301"
tf-nightly = "2.4.0.dev20200903"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
